Fix accessibility link visibility in footer CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -894,9 +894,9 @@ footer a:hover {
         letter-spacing: 1.5px;
     }
 
-     /* #accessibility {
+    #accessibility {
         display: none;
-    } */
+    }
 }
 
 @media screen and (max-width: 480px) {
